New UX and UI design, including finishing shelves, and making them organizable for users. Also finished landing page / home page
